# klippbok-mcp

./: .env.example  .gitignore  AGENTS.md  HANDOFF.md  LICENSE  README.md  pyproject.toml
.claude/: learnings.md
src/klippbok_mcp/: __init__.py  manifest.py  runner.py  server.py
tests/: test_manifest.py  test_runner.py
