[project]
name = "klippbok-mcp"
version = "0.1.0"
description = "MCP server for Klippbok video dataset curation toolkit"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "hoodtronik" },
]
keywords = ["mcp", "klippbok", "video", "dataset", "lora", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
klippbok-mcp = "klippbok_mcp.server:main"

[project.urls]
Homepage = "https://github.com/hoodtronik/klippbok-mcp"
Repository = "https://github.com/hoodtronik/klippbok-mcp"
Issues = "https://github.com/hoodtronik/klippbok-mcp/issues"
"Klippbok (upstream)" = "https://github.com/alvdansen/klippbok"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/klippbok_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
